--- a/less/animation.less
+++ b/less/animation.less
@@ -7,7 +7,7 @@
 #animation1{
 	width: @cuadradro;
 	height: @cuadradro;
-	background-color: @red;
+	background-color: @naranja3;
 	margin: @margincuadrado;
 	transition-duration: 1s;
 }
@@ -22,7 +22,7 @@
 #animation2{
 	width: @cuadradro;
 	height: @cuadradro;
-	background-color: @red;
+	background-color: @naranja3;
 	margin: @margincuadrado;
 	transition-duration: 1s;
 	animation-name: animationtwo;
@@ -37,7 +37,7 @@
 #animation3{
 	width: @cuadradro;
 	height: @cuadradro;
-	background-color: @red;
+	background-color: @naranja3;
 	margin: @margincuadrado;
 	transition-duration: 1s;
 	animation-name: animationtwo;
@@ -53,7 +53,7 @@
 #animation4{
 	width: @cuadradro;
 	height: @cuadradro;
-	background-color: @red;
+	background-color: @naranja4;
 	margin: @margincuadrado;
 	transition-duration: 1s;
 }
@@ -70,7 +70,7 @@
 #animation5{
 	width: @cuadradro;
 	height: @cuadradro;
-	background-color: @red;
+	background-color: @naranja4;
 	margin: @margincuadrado;
 	transition-duration: 1s;
 }
@@ -87,7 +87,7 @@
 #animation6{
 	width: @cuadradro;
 	height: @cuadradro;
-	background-color: @red;
+	background-color: @naranja4;
 	margin: @margincuadrado;
 	transition-duration: 1s;
 }
@@ -192,7 +192,7 @@
 #animation13{
 	width: @cuadradro;
 	height: @cuadradro;
-	background-color: @red;
+	background-color: @naranja3;
 	margin: @margincuadrado;
 	transition-duration: 1s;
 }
@@ -205,7 +205,7 @@
 #animation14{
 	width: @cuadradro;
 	height: @cuadradro;
-	background-color: @red;
+	background-color: @naranja3;
 	margin: @margincuadrado;
 	transition-duration: 1s;
 }
@@ -218,7 +218,7 @@
 #animation15{
 	width: @cuadradro;
 	height: @cuadradro;
-	background-color: @red;
+	background-color: @naranja3;
 	margin: @margincuadrado;
 	transition-duration: 1s;
 }
@@ -232,7 +232,7 @@
 #animation16{
 	width: @cuadradro;
 	height: @cuadradro;
-	background-color: @red;
+	background-color: @naranja4;
 	margin: @margincuadrado;
 	transition-duration: 1s;
 }
@@ -245,7 +245,7 @@
 #animation17{
 	width: @cuadradro;
 	height: @cuadradro;
-	background-color: @red;
+	background-color: @naranja4;
 	margin: @margincuadrado;
 	transition-duration: 1s;
 }
@@ -258,7 +258,7 @@
 #animation18{
 	width: @cuadradro;
 	height: @cuadradro;
-	background-color: @red;
+	background-color: @naranja4;
 	margin: @margincuadrado;
 	transition-duration: 1s;
 }
@@ -321,4 +321,191 @@
 	from {-webkit-transform:scale(0,0.9);}
 	to {-webkit-transform:scale(1,1)}
 
+}
+
+#animation21{
+	width: @cuadradro;
+	height: @cuadradro;
+	background-color: @red;
+	margin: @margincuadrado;
+	transition-duration: 1s;
+	-webkit-animation-name:si;
+	-webkit-animation-duration:1s;
+	-webkit-transform-origin: left center;
+	/*para pausar el loop de la animacion quitar esta propiedad*/
+	-webkit-animation-iteration-count:infinite;
+}
+
+@-webkit-keyframes si{
+	from {-webkit-transform:scale(0,1);}
+	to {-webkit-transform:scale(1,1)}
+
+}
+
+#animation22{
+	width: @cuadradro;
+	height: @cuadradro;
+	background-color: @red;
+	margin: @margincuadrado;
+	transition-duration: 1s;
+	-webkit-animation-name:si;
+	-webkit-animation-duration:1s;
+	-webkit-transform-origin: right center;
+	/*para pausar el loop de la animacion quitar esta propiedad*/
+	-webkit-animation-iteration-count:infinite;
+}
+
+@-webkit-keyframes si{
+	from {-webkit-transform:scale(1,1);}
+	to {-webkit-transform:scale(0,1)}
+
+}
+
+#animation23{
+	width: @cuadradro;
+	height: @cuadradro;
+	background-color: @red;
+	margin: @margincuadrado;
+	transition-duration: 1s;
+	-webkit-animation-name:si;
+	-webkit-animation-duration:1s;
+	-webkit-transform-origin: right bottom;
+	/*para pausar el loop de la animacion quitar esta propiedad*/
+	-webkit-animation-iteration-count:infinite;
+}
+
+@-webkit-keyframes si{
+	from {-webkit-transform:scale(1,0);}
+	to {-webkit-transform:scale(1,1)}
+
+}
+
+#animation24{
+	width: @cuadradro;
+	height: @cuadradro;
+	background-color: @red;
+	margin: @margincuadrado;
+	transition-duration: 1s;
+	-webkit-animation-name:si;
+	-webkit-animation-duration:1s;
+	-webkit-transform-origin: right top;
+	/*para pausar el loop de la animacion quitar esta propiedad*/
+	-webkit-animation-iteration-count:infinite;
+}
+
+@-webkit-keyframes si{
+	from {-webkit-transform:scale(1,0);}
+	to {-webkit-transform:scale(1,1)}
+
+}
+
+#animation25{
+	width: @cuadradro;
+	height: @cuadradro;
+	background-color: @naranja3;
+	margin: @margincuadrado;
+	transition-duration: 1s;
+	-webkit-animation-name: clock;
+	-webkit-animation-duration: 1s;
+	-webkit-animation-iteration-count: infinite;
+}
+@-webkit-keyframes clock{
+	from {-webkit-transform:rotate(0deg);}
+	to {-webkit-transform:rotate(360deg);}
+}
+
+
+#animation26{
+	width: @cuadradro;
+	height: @cuadradro;
+	background-color: @naranja3;
+	margin: @margincuadrado;
+	transition-duration: 1s;
+	-webkit-animation-name: pers;
+	-webkit-animation-duration: 1s;
+	-webkit-animation-iteration-count: infinite;
+}
+@-webkit-keyframes pers{
+	from {-webkit-transform:rotatey( 0deg);}
+	to {-webkit-transform:rotatey( 360deg);}
+}
+
+#animation27{
+	width: @cuadradro;
+	height: @cuadradro;
+	background-color: @naranja3;
+	margin: @margincuadrado;
+	transition-duration: 1s;
+	-webkit-animation-name: persa;
+	-webkit-animation-duration: 1s;
+	-webkit-animation-iteration-count: infinite;
+}
+@-webkit-keyframes persa{
+	from {-webkit-transform:rotatex( 0deg);}
+	to {-webkit-transform:rotatex( 360deg);}
+}
+
+#animation28{
+	width: @cuadradro;
+	height: @cuadradro;
+	background-color: @naranja4;
+	margin: @margincuadrado;
+	transition-duration: 1s;
+	-webkit-animation-name: trasx;
+	-webkit-animation-duration:1s;
+	-webkit-animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes trasx{
+	from {-webkit-transform:translatex(0px);}
+	to {-webkit-transform:translatex(-150px);}
+}
+
+#animation29{
+	width: @cuadradro;
+	height: @cuadradro;
+	background-color: @naranja4;
+	margin: @margincuadrado;
+	transition-duration: 1s;
+	-webkit-animation-name: tras_x;
+	-webkit-animation-duration:1s;
+	-webkit-animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes tras_x{
+	from {-webkit-transform:translatex(0px);}
+	to {-webkit-transform:translatex(150px);}
+}
+
+#animation30{
+	width: @cuadradro;
+	height: @cuadradro;
+	background-color: @naranja4;
+	margin: @margincuadrado;
+	transition-duration: 1s;
+	-webkit-animation-name: sx;
+	-webkit-animation-duration:1s;
+	-webkit-animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes sx{
+	from { -webkit-transform:translatey(0px);}
+	to {-webkit-transform:translatey(100px);}
+}
+
+
+#animation31{
+	width: @cuadradro;
+	height: @cuadradro;
+	background-color: @naranja4;
+	margin: @margincuadrado;
+	transition-duration: 1s;
+	-webkit-animation-name: sx;
+	-webkit-animation-duration:1s;
+	-webkit-animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes sx{
+	from { -webkit-transform:translatey(100px);}
+	to {-webkit-transform:translatey(0px);}
 }
