estructura visual en un 50%

--- a/less/colors.less
+++ b/less/colors.less
@@ -26,6 +26,7 @@
 .c-fucsia-2{background-color: @fucsia2;}
 
 .c-verde{background-color: @verde;}
+.c-gris{background-color: @gristexto;}
 
 .c-verde-3{background-color: @verde3;}
 // naranja
