--- a/less/animation.less
+++ b/less/animation.less
@@ -1,6 +1,8 @@
 @import "variables.less";
+//geometry solid
 @cuadradro: 200px ;
-@margincuadrado: 30px 0px 30px 0px;
+@margincuadrado: 30px 0px 0px 0px;
+
 
 /* cambio de color */
 
