--- a/less/variables.less
+++ b/less/variables.less
@@ -42,6 +42,43 @@
 
 
 
+//
+.textoblancop{
+	color: @white;
+	font-family: @fuente2;
+	font-size: 2em;
+	font-weight: 300;
+	line-height: 1.5em;
+	padding-top: @10;
+	
+}
+
+.description{
+	color: @gristexto;
+	font-family: @fuente2;
+	font-size: 1.5em;
+	font-weight: 600;
+	line-height: 1.5em;
+	padding-top: @10;
+	
+}
+.boton{
+	background-color: @white;
+	border-radius: 1em;
+	padding: 10px 0px 10px 0px;
+	margin: 0px 0px 20px 0px;
+	list-style-type: none;
+}
+
+.textonar{
+	color: @naranja4;
+	font-family: @fuente2;
+	font-size: 2em;
+	font-weight: 600;
+	line-height: 1.5em;
+	padding-top: @10;
+	
+}
 
 
 
