--- a/less/colors.less
+++ b/less/colors.less
@@ -36,6 +36,6 @@
 .c-naranja-4{background-color: @naranja4;}
 
 
-.c-morado{background-color: @morado;}
+.c-morado{background-color: @morado2;}
 
 .c-fucsia{background-color: @fucsia;}
